# HyperSensors

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml  setup.sh  vcs.repos
.github/workflows/: actions.yml  main.yml
apps/tests/: CMakeLists.txt  main.cpp
include/hyper/ceres/manifolds/sensors/: camera.hpp  imu.hpp  sensor.hpp  sensors.hpp
include/hyper/messages/: abstract.hpp  forward.hpp  message.hpp  messages.hpp  visual.hpp
include/hyper/messages/measurements/: absolute.hpp  abstract.hpp  forward.hpp  inertial.hpp  measurement.hpp  measurements.hpp  relative.hpp  variable.hpp  visual.hpp
include/hyper/sensors/: camera.hpp  forward.hpp  imu.hpp  sensor.hpp  sensors.hpp
include/hyper/yaml/: definitions.hpp  forward.hpp  yaml.hpp
internal/hyper/ceres/manifolds/sensors/: camera.cpp  imu.cpp  sensor.cpp
internal/hyper/messages/: abstract.cpp  visual.cpp
internal/hyper/messages/measurements/: abstract.cpp
internal/hyper/sensors/: camera.cpp  imu.cpp  sensor.cpp
internal/hyper/yaml/: yaml.cpp
tests/include/hyper/: utils.hpp
tests/internal/hyper/sensors/: camera.yaml  camera_tests.cpp  imu.yaml  imu_tests.cpp  sensor.yaml  sensor_tests.cpp
