<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyper_sensors</name>
  <version>1.0.0</version>
  <description>HyperSensors implements physical sensor models.</description>
  <maintainer email="dhug@mavt.ethz.ch">David Hug</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>hyper_variables</build_depend>
  <build_depend>hyper_state</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
